--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,3 @@
 GIT_COMMITTER_NAME=prettier
-GIT_COMMITTER_EMAIL=prettier@ontrackretail.co.uk
+GIT_COMMITTER_EMAIL=prettier@example.com
 GITHUB_KEY=<Get a personal github token with `repo` permissions>
-GITHUB_OWNER=otrl
-GITHUB_REPO=booking-engine
-
-# set to `true` to push tags & prettified code to `origin`
-PRETTIFY_REMOTE=false
